--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint ./",
-    "dev": "export NODE_ENV=development || set NODE_ENV=development && node ./index.js",
+    "dev": "export NODE_ENV=development || set NODE_ENV=development && nodemon ./index.js",
     "prod": "export NODE_ENV=production || set NODE_ENV=production  && node ./index.js"
   },
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.7",
