--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint ./",
-    "dev": "export NODE_ENV=development || set NODE_ENV=development && nodemon ./index.js",
+    "dev": "export NODE_ENV=development || set NODE_ENV=development && node ./index.js",
     "prod": "export NODE_ENV=production || set NODE_ENV=production  && node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
